--- a/index.html
+++ b/index.html
@@ -5,53 +5,98 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link type="text/css" rel="stylesheet" href="node_modules/materialize-css/dist/css/materialize.min.css" media="screen,projection"
+    />
+
     <title>Cours AngularJs</title>
 </head>
 
 <body ng-controller="indexController">
-    <header>
-        <h2 ng-bind="titre"></h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>Nom</th>
-                    <th>Email</th>
-                    <th>Note1</th>
-                    <th>Note2</th>
-                    <th>Note3</th>
-                    <th>Moyenne</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr ng-repeat="eleve in eleves">
-                    <td>{{ eleve.nom }}</td>
-                    <td>{{ eleve.email }}</td>
-                    <td>{{ eleve.note1 }}</td>
-                    <td>{{ eleve.note2 }}</td>
-                    <td>{{ eleve.note3 }}</td>
-                    <td>{{ moyen(eleve) }}</td>
-                </tr>
-            </tbody>
-        </table>
+    <header class="container">
+        <div class="row">
+            <h2 ng-bind="titre"></h2>
+        </div>
     </header>
+    <main class="container">
+        <div class="row">
+            <input type="text" ng-model="search" placeholder="Search"> {{ search }}
+        </div>
+        <div class="row">
+            <table class="striped">
+                <thead>
+                    <tr>
+                        <th>Nom</th>
+                        <th>Email</th>
+                        <th>Note1</th>
+                        <th>Note2</th>
+                        <th>Note3</th>
+                        <th>Moyenne</th>
+                        <th>Event</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="eleve in eleves | filter:search">
+                        <td>{{ eleve.nom }}</td>
+                        <td>{{ eleve.email }}</td>
+                        <td>{{ eleve.note1 }}</td>
+                        <td>{{ eleve.note2 }}</td>
+                        <td>{{ eleve.note3 }}</td>
+                        <td>{{ eleve.moyenne }}</td>
+                        <td>
+                            <button ng-click="editEleve(eleve)" class="btn blue">Modifier</button>
+                            <button ng-click="deleteEleve(eleve)" class="btn red">Supprimer</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="row">
+            <!-- Modal Trigger -->
+            <a ng-click="openAddEleve()" class="waves-effect waves-light btn">Ajouter</a>
+        </div>
+
+    </main>
+
+    <!-- Modal Structure -->
+    <div id="modal1" class="modal modal-fixed-footer">
+        <div class="modal-content">
+            <h4 ng-if="!modifier">Ajouter Elève</h4>
+            <h4 ng-if="modifier">Modifier Elève</h4>
+            <p>Remplir les coordonnées d'élève</p>
+            <div class="row">
+                <div class="input-field col m6 s12">
+                    <input type="text" ng-model="Elev.nom" class="validate" placeholder="Nom">
+                </div>
+                <div class="input-field col m6 s12">
+                    <input type="text" ng-model="Elev.email" class="validate" placeholder="E-mail">
+                </div>
+                <div class="input-field col m4 s12">
+                    <input type="text" ng-model="Elev.note1" class="validate" placeholder="Note 1">
+                </div>
+                <div class="input-field col m4 s12">
+                    <input type="text" ng-model="Elev.note2" class="validate" placeholder="Note 2">
+                </div>
+                <div class="input-field col m4 s12">
+                    <input type="text" ng-model="Elev.note3" class="validate" placeholder="Note 3">
+                </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <a ng-if="!modifier" ng-click="addEleve(Elev)" class="waves-effect waves-light btn blue" href="#modal1">Ajouter</a>
+            <a ng-if="modifier" ng-click="saveElev(Elev)" class="waves-effect waves-light btn blue" href="#modal1">Enregistrer</a>
+            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Annuler</a>
+        </div>
+    </div>
+
+    <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="node_modules/materialize-css/dist/js/materialize.min.js"></script>
     <script src="node_modules/angular/angular.min.js"></script>
-    <script type="text/javascript">
-        angular.module("monModule", [])
-            .controller("indexController", function ($scope) {
-                $scope.titre = "System avec Angular JS";
-                $scope.eleves = [
-                    { nom: 'Paul', email: 'paul@hotmail.com', note1: 17, note2: 15, note3: 12 },
-                    { nom: 'Leo', email: 'leo@hotmail.com', note1: 13, note2: 14, note3: 18 },
-                    { nom: 'Jean', email: 'jean@hotmail.com', note1: 14, note2: 11, note3: 16 },
-                    { nom: 'Sophie', email: 'sophie@hotmail.com', note1: 20, note2: 19, note3: 12 },
-                    { nom: 'Julia', email: 'julia@hotmail.com', note1: 19, note2: 15, note3: 10 }
-                ];
-                $scope.moyen = function (Eleve) {
-                    var moyen = (Eleve.note1 + Eleve.note2 + Eleve.note3)/3;
-                    return moyen.toFixed(2);
-                }
-            })
-    </script>
+
+    <script src="js/materialize/init.js"></script>
+
+    <script src="js/app/app.js"></script>
+    <script src="js/app/controllers.js"></script>
+
 </body>
 
 </html>
